# pyroll-sander-spreading

./: README.md  hatch.toml  pyproject.toml
docs/: docs.tex  refs.bib
pyroll/: sander_spreading.py
pyroll/sander_spreading/: hookimpls.py  hookspecs.py
tests/: test_solve.py  test_solve3.py
